--- a/final_report_tex/final-report.tex
+++ b/final_report_tex/final-report.tex
@@ -638,7 +638,7 @@ Performing the hyperparameter optimization of the \gls{tcn} with $ 500 $ and $ 1
 	\end{tabular}
 \end{table}
 
-Figure \ref{fig:accuracy_500_1000_structures_random_search_TCN} shows the training history of the best models of the \gls{tcn} hyperparameter optimization when training with $ 500 $ and $ 1000 $ structures respectively. None of the two models shows a sign of overfitting on the training dataset. Both models are not yet fully converged and therefore have room for improvement. This potential is exploited in the model fine tuning in section \ref{sec:tcn_fine_tuning_results}. Both training histories show instabilities during draining, indicating that the learning rate should be reduced which is done in the subsequent model fine tuning.
+Figure \ref{fig:accuracy_500_1000_structures_random_search_TCN} shows the training history of the best models of the \gls{tcn} hyperparameter optimization when training with $ 500 $ and $ 1000 $ structures respectively. None of the two models shows a sign of overfitting on the training dataset. Both models are not yet fully converged and therefore have room for improvement. This potential is exploited in the model fine tuning in section \ref{sec:cnn_fine_tuning_results}. Both training histories show instabilities during draining, indicating that the learning rate should be reduced which is done in the subsequent model fine tuning.
 
 \begin{figure}[htp]
 	\centering
