--- a/final_report_tex/final-report.tex
+++ b/final_report_tex/final-report.tex
@@ -55,6 +55,7 @@
 
 \usepackage{amsfonts}
 \usepackage[cmex10]{amsmath}
+\usepackage{bbm}
 \usepackage{multirow}
 \usepackage[acronym,indexonlyfirst,nomain]{glossaries}
 
@@ -121,8 +122,6 @@ With the increasing availability of data for \gls{phm} data driven approaches be
 This paper aims to compare Deep Learning models to predict the \gls{rul} of a structure. The investigated models are the following: the \gls{cnn} family with the 1D-\gls{cnn} and \gls{tcn} architectures and the \gls{rnn} family with the \gls{rnn}, \glspl{lstm} and \glspl{gru} architectures.
 
 The dataset for training and testing consists in simulations of the crack growth in plates, based on the Paris-Erdogan law. The training and validation dataset is composed of 10\,000 structures while the testing dataset is composed of 100 structures. Each architecture is optimized and trained on respectively 100, 500 and 1000 structures from the training dataset. At the end, the different models are evaluated and compared on the testing dataset on the basis of the accuracy metric.
-
-%In order to optimize the architectures, the first step is to identify the fixed parameters which do not have a significant impact on the accuracy, and the variable ones which should be optimized. The variable hyperparameters are optimized with a Random Search Strategy on 100 and 500 structures for the \gls{rnn} family. For the \gls{cnn} family, the models are optimized on 100, 500 and 1000 structures. The optimized models are then fine tuned with an adaptive learning rate. The results show that within the \gls{rnn} family \glspl{gru} make the best predictions while within the \gls{cnn} family \glspl{tcn} do so.
 
 Both the \gls{gru} and \gls{tcn} models show a validation accuracy of greater than 95\% when trained on 500 or 1000 structures. But the \gls{tcn} outperforms all other models on the testing dataset where it reaches 100\% accuracy after being trained on 1000 structures.
 
@@ -301,7 +300,12 @@ To evaluate the performance of developed models a metric is needed. As the netwo
 
 \begin{equation}
 	\label{eq:accuracy_metric}
-	\mathrm{Accuracy} = \frac{1}{N} \sum_{i=1}^{N} 1 (\hat{y}_i = y_i)
+	\begin{split}
+		\begin{aligned}
+			\mathrm{Accuracy} & = \frac{\mathrm{number\:of\:correct\:classifications}}{\mathrm{total\:number\:of\:classifications}} \\
+			& = \frac{1}{N}\sum_{i=1}^N \mathbbm{1}_{y_i = \hat{y}_i}
+		\end{aligned}
+	\end{split}
 \end{equation}
 
 where $ N $ is the number of samples with $ \hat{y} $ being the prediction and $ y $ the target value.
