--- a/final_report_tex/references_final_report.bib
+++ b/final_report_tex/references_final_report.bib
@@ -18,7 +18,7 @@
   volume       = {172},
   date         = {2018},
   doi          = {10.1016/j.ress.2017.11.021},
-  file         = {:G\:/My Drive/Studium ISAE SUPAERO/PIR/Literature/LI20181 - Remaining Useful Life Estimation in Prognostics Using Deep Convolution Neural Networks.pdf:PDF},
+  file         = {:G\:/My Drive/Studium ISAE SUPAERO/PIR/Literature/Li2018 - Remaining Useful Life Estimation in Prognostics Using Deep Convolution Neural Networks.pdf:PDF},
   journaltitle = {Reliability Engineering \& System Safety},
   keywords     = {Prognostics and health management, Remaining useful life, Deep learning, Convolution neural network},
   url          = {https://www.sciencedirect.com/science/article/pii/S0951832017307779},
@@ -412,17 +412,17 @@
 
 @Article{Bai2018,
   author        = {Shaojie Bai and J. Zico Kolter and Vladlen Koltun},
-  journal       = {CoRR},
   title         = {An Empirical Evaluation of Generic Convolutional and Recurrent Networks for Sequence Modeling},
-  year          = {2018},
   volume        = {abs/1803.01271},
   archiveprefix = {arXiv},
   bibsource     = {dblp computer science bibliography, https://dblp.org},
   biburl        = {https://dblp.org/rec/journals/corr/abs-1803-01271.bib},
+  date          = {2018},
   eprint        = {1803.01271},
+  eprinttype    = {arxiv},
   file          = {:G\:/My Drive/Studium ISAE SUPAERO/PIR/Literature/Bai2018 - An Empirical Evaluation of Generic Convolutional and Recurrent Networks for Sequence Modeling.pdf:PDF},
+  journaltitle  = {CoRR},
   timestamp     = {Mon, 13 Aug 2018 16:47:39 +0200},
-  url           = {http://arxiv.org/abs/1803.01271},
 }
 
 @Article{Elman1990,
@@ -459,22 +459,21 @@ A theory of learned sequential behavior is presented, with a focus on coarticula
 }
 
 @InProceedings{Yan2007,
-  author  = {Yan, Jihong and Wang, Pengxiang},
-  title   = {Blade Material Fatigue Assessment Using Elman Neural Networks},
-  year    = {2007},
-  month   = jan,
-  volume  = {2007},
-  doi     = {10.1115/IMECE2007-43311},
-  file    = {:G\:/My Drive/Studium ISAE SUPAERO/PIR/Literature/Yan2007 - Blade Material Fatigue Assessment Using Elman Neural Networks.pdf:PDF},
-  journal = {ASME Conference Proceedings},
+  author       = {Yan, Jihong and Wang, Pengxiang},
+  title        = {Blade Material Fatigue Assessment Using Elman Neural Networks},
+  volume       = {2007},
+  date         = {2007-01},
+  doi          = {10.1115/IMECE2007-43311},
+  file         = {:G\:/My Drive/Studium ISAE SUPAERO/PIR/Literature/Yan2007 - Blade Material Fatigue Assessment Using Elman Neural Networks.pdf:PDF},
+  journaltitle = {ASME Conference Proceedings},
 }
 
 @InProceedings{Kramti2018,
   author    = {Kramti, Sharaf Eddine and Ben Ali, Jaouher and Saidi, Lotfi and Sayadi, Mounir and Bechhoefer, Eric},
   booktitle = {2018 5th International Conference on Control, Decision and Information Technologies (CoDIT)},
   title     = {Direct Wind Turbine Drivetrain Prognosis Approach Using Elman Neural Network},
-  year      = {2018},
   pages     = {859-864},
+  date      = {2018},
   doi       = {10.1109/CoDIT.2018.8394926},
   file      = {:G\:/My Drive/Studium ISAE SUPAERO/PIR/Literature/Kramti2018 - Direct Wind Turbine Drivetrain Prognosis Approach Using Elman Neural Network.pdf:PDF},
 }
@@ -485,39 +484,39 @@ A theory of learned sequential behavior is presented, with a focus on coarticula
 }
 
 @Article{Sayyad,
-  author  = {Rehan Ahmed Sayyad},
-  journal = {Medium},
-  title   = {How to Use Convolutional Neural Networks for Time Series Classification},
-  url     = {https://medium.com/@Rehan_Sayyad/how-to-use-convolutional-neural-networks-for-time-series-classification-80575131a474},
+  author       = {Rehan Ahmed Sayyad},
+  title        = {How to Use Convolutional Neural Networks for Time Series Classification},
+  journaltitle = {Medium},
+  url          = {https://medium.com/@Rehan_Sayyad/how-to-use-convolutional-neural-networks-for-time-series-classification-80575131a474},
 }
 
 @Article{Chen2021,
-  author  = {Chen, Guang},
-  journal = {Computational Mechanics},
-  title   = {Recurrent neural networks (RNNs) learn the constitutive law of viscoelasticity},
-  year    = {2021},
-  month   = {03},
-  volume  = {67},
-  doi     = {10.1007/s00466-021-01981-y},
+  author       = {Chen, Guang},
+  title        = {Recurrent neural networks (RNNs) learn the constitutive law of viscoelasticity},
+  volume       = {67},
+  date         = {2021-03},
+  doi          = {10.1007/s00466-021-01981-y},
+  journaltitle = {Computational Mechanics},
 }
+
 @InCollection{Feurer2019,
   author    = {Feurer, Matthias and Hutter, Frank},
   booktitle = {Automated Machine Learning},
   publisher = {Springer, Cham},
   title     = {Hyperparameter optimization},
-  year      = {2019},
   pages     = {3--33},
-  file      = {:G\:/My Drive/Studium ISAE SUPAERO/PIR/Literature/1007149.pdf:PDF},
+  date      = {2019},
+  file      = {:G\:/My Drive/Studium ISAE SUPAERO/PIR/Literature/Feurer2019 - Hyperparameter Optimization.pdf:PDF},
 }
 
 @Misc{You2019,
-  author        = {Kaichao You and Mingsheng Long and Jianmin Wang and Michael I. Jordan},
-  title         = {How Does Learning Rate Decay Help Modern Neural Networks?},
-  year          = {2019},
-  archiveprefix = {arXiv},
-  eprint        = {1908.01878},
-  file          = {:G\:/My Drive/Studium ISAE SUPAERO/PIR/Literature/1908.01878.pdf:PDF},
-  primaryclass  = {cs.LG},
+  author      = {Kaichao You and Mingsheng Long and Jianmin Wang and Michael I. Jordan},
+  title       = {How Does Learning Rate Decay Help Modern Neural Networks?},
+  date        = {2019},
+  eprint      = {1908.01878},
+  eprintclass = {cs.LG},
+  eprinttype  = {arXiv},
+  file        = {:G\:/My Drive/Studium ISAE SUPAERO/PIR/Literature/You2019 - How Does Learning Rate Decay Help Modern Neural Networks_.pdf:PDF},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
